--- a/client/src/Components/Title/Title.css
+++ b/client/src/Components/Title/Title.css
@@ -1,4 +1,19 @@
-.title_image {
-    height: 50rem;
+.overlay-image {
+    position: relative;
     width: 100%
+}
+
+.title-image {
+    display: block;
+    width: 100%;
+    height: 55rem
+}
+
+.overlay-image .text {
+    font-size: 2.4rem;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    color: white
 }
